# Jaster-Contest

./: .dockerignore  .env  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  bootstrap_ubuntu.sh  mcp.json  pyproject.toml  requirements.txt  test_mcp_tools.py
functions/: cred_dump.json  dns_enum.json  exploit_search.json  ffuf_bruteforce.json  git-dumper.json  kerberos_attack.json  ldap_enum.json  sqli_exploit.json  tech_fingerprint.json  web_content_discovery.json  web_crawl.json
reports/http_node4.anna.nssctf.cn_22953/: _26-04-13_22-33-36.txt
reports/http_node4.anna.nssctf.cn_24052/: __26-05-13_14-19-28.txt
reports/http_node4.anna.nssctf.cn_26724/: _26-04-13_21-54-34.txt  _26-04-13_22-09-49.txt
reports/http_node4.anna.nssctf.cn_28783/: _26-04-13_17-04-03.txt  _26-04-13_17-06-46.txt  __26-04-13_17-21-00.txt
skills/: adversarial-ml.md  auth-and-access.md  auth-infra.md  auth-jwt.md  client-side-advanced.md  client-side.md  cves.md  dns_enum.json  ffuf_bruteforce.json  field-notes.md  hydra.json  js_source_analyze.json  kerberos_attack.json  llm-attacks.md  model-attacks.md  node-and-prototype.md  port_scan.json  server-side-advanced-2.md  server-side-advanced.md  server-side-deser.md  server-side-exec-2.md  server-side-exec.md  server-side.md  smb_net_enum.json  source_code_mining.md  sql-injection.md  sqli_exploit.json  ssl_scan.json  system_command.json  web_content_discovery.json  web_crawl.json  wpscan.json
skills/docs/: password_b64.txt
src/jaster/: cli.py
tests/: test_agent_contracts.py  test_attack_tree.py  test_orchestrator.py
(+71 files in other folders)
