[project]
name = "jaster"
version = "0.1.0"
description = "Clean multi-agent pentest runtime built around a shared attack tree."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
jaster = "jaster.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jaster"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

