[project]
name = "jaster"
version = "0.1.0"
description = "Clean multi-agent pentest runtime built around a shared task tree and MCP tools."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "duckduckgo-search>=6.2.0",
  "httpx>=0.27.0",
  "mcp>=1.0.0",
  "pydantic>=2.8.0",
  "requests>=2.32.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
jaster = "jaster.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jaster"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
